--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button id="equal-btn">=</button>
         </div>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
